--- a/src/SSMSTools/SSMSTools.csproj
+++ b/src/SSMSTools/SSMSTools.csproj
@@ -111,16 +111,16 @@
       <HintPath>..\..\packages\Azure.Identity.1.10.3\lib\netstandard2.0\Azure.Identity.dll</HintPath>
     </Reference>
     <Reference Include="EnvDTE">
-      <HintPath>lib\Program Files (x86)\Common Files\Microsoft Shared\MSEnv\PublicAssemblies\EnvDTE.dll</HintPath>
+      <HintPath>lib\EnvDTE.dll</HintPath>
     </Reference>
     <Reference Include="EnvDTE100">
-      <HintPath>lib\Program Files (x86)\Common Files\Microsoft Shared\MSEnv\PublicAssemblies\EnvDTE100.dll</HintPath>
+      <HintPath>lib\EnvDTE100.dll</HintPath>
     </Reference>
     <Reference Include="EnvDTE80">
-      <HintPath>lib\Program Files (x86)\Common Files\Microsoft Shared\MSEnv\PublicAssemblies\EnvDTE80.dll</HintPath>
+      <HintPath>lib\EnvDTE80.dll</HintPath>
     </Reference>
     <Reference Include="EnvDTE90">
-      <HintPath>lib\Program Files (x86)\Common Files\Microsoft Shared\MSEnv\PublicAssemblies\EnvDTE90.dll</HintPath>
+      <HintPath>lib\EnvDTE90.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
@@ -244,7 +244,7 @@
       <HintPath>..\..\packages\Microsoft.SqlServer.SqlManagementObjects.171.30.0\lib\net462\Microsoft.SqlServer.WmiEnum.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.CommandBars">
-      <HintPath>lib\Program Files (x86)\Common Files\Microsoft Shared\MSEnv\PublicAssemblies\Microsoft.VisualStudio.CommandBars.dll</HintPath>
+      <HintPath>lib\Microsoft.VisualStudio.CommandBars.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.CoreUtility, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.VisualStudio.CoreUtility.15.0.26228\lib\net45\Microsoft.VisualStudio.CoreUtility.dll</HintPath>
@@ -327,7 +327,7 @@
       <HintPath>lib\SqlWorkbench.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="stdole">
-      <HintPath>lib\Program Files (x86)\Common Files\Microsoft Shared\MSEnv\PublicAssemblies\stdole.dll</HintPath>
+      <HintPath>lib\stdole.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
